--- a/etc/nginx/nginx.conf
+++ b/etc/nginx/nginx.conf
@@ -1,8 +1,8 @@
 worker_processes  auto;
 
-error_log  error.log;
-error_log  error.log  notice;
-error_log  error.log  info;
+error_log  /error.log;
+error_log  /error.log  notice;
+error_log  /error.log  info;
 
 events {
     worker_connections  1024;
@@ -29,6 +29,10 @@ http {
             index index.html;
         }
 
+	location /dash {
+	    root /tmp;
+	}
+
         location /hls {
             types {
                 application/vnd.apple.mpegurl m3u8;
@@ -36,8 +40,9 @@ http {
 
             root /tmp;
             
-            add_header Cache-Control no-cache; # Prevent caching of HLS fragments
-            add_header Access-Control-Allow-Origin * always; # Allow web player to access our playlist
+            #add_header Cache-Control no-cache; # Prevent caching of HLS fragments
+	    add_header 'Cache-Control' 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+            add_header 'Access-Control-Allow-Origin' '* always'; # Allow web player to access our playlist
             add_header 'Access-Control-Expose-Headers' 'Content-Length';
 
             # allow CORS preflight requests
@@ -77,6 +82,12 @@ rtmp {
                         -c:v libx264 -c:a libfdk_aac -b:v 1920k -b:a 128k -vf "scale=1280:trunc(ow/a/2)*2" -tune zerolatency -preset veryfast -g 2  -crf 23 -f flv rtmp://localhost/hls/$name_hd720
                         -c copy -tune zerolatency -g 2 -f flv rtmp://localhost/hls/$name_src;
         }
+	application dash {
+	    live on;
+	    dash on;
+	    dash_path /tmp/dash;
+
+	}
         application hls {
             live on; # Allows live input from above
             hls on; # Enable HTTP Live Streaming
@@ -85,12 +96,15 @@ rtmp {
             hls_path /tmp/hls;
 
             hls_fragment 2s;
+	    hls_playlist_length 60s;
+	    hls_sync 100ms;
+	    hls_nested on;
+	    hls_continuous on;
             hls_cleanup off; # see clean-hls-dir.sh for more information;
-            hls_playlist_length 6s;
             
             # allow publish only from localhost
-            allow publish 127.0.0.1;
-            deny publish all;
+            allow publish all;
+            #deny publish all;
             
             # Instruct clients to adjust resolution according to bandwidth
             hls_variant _low BANDWIDTH=288000; # Low bitrate, sub-SD resolution
